Ajout d'un chargement lors de l'appel aux WS

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex justify-content-center" id="footerContent">
-  <p class="font-weight-lighter"><a href="http://navillus.kim" target="_blank">© Zarhkoh </a>- Tous droits réservés</p>
+  <p class="font-weight-lighter"><a href="http://cv.navillus.kim" target="_blank">© Zarhkoh </a>- Tous droits réservés
+  </p>
   <p class="mx-2 font-weight-lighter">|</p>
   <a href="mailto:jld_philatelie@laposte.net" class="">Contactez-moi</a>
 </div>
