--- a/src/app/components/timbre-list/timbre-list.component.html
+++ b/src/app/components/timbre-list/timbre-list.component.html
@@ -1,5 +1,7 @@
-<pre>{{timbreSearch}}</pre>
-<div *ngIf="error!= null && timbreList && timbreList !== null &&timbreList.length ==0" class="alert alert-danger"
+<div *ngIf="loading" id="loading">
+  <img src="../../../assets/img/loading.gif">
+</div>
+<div *ngIf="error!= null && timbreList && timbreList !== null &&timbreList.length ==0" class=" mt-4 alert alert-danger"
   role="alert">
   {{error}} </div>
 <div *ngIf="timbreList && timbreList !== null &&timbreList.length > 0" class="grille d-flex">
