--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 <!-- <app-navbar></app-navbar> -->
 <div class="d-flex">
-  <app-sidebar *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminPanel')">
+  <app-sidebar
+    *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminPanel') && !location.isCurrentPathEqualTo('/register')">
   </app-sidebar>
   <router-outlet></router-outlet>
 </div>
