fix route adminComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- <app-navbar></app-navbar> -->
 <div class="d-flex">
   <app-sidebar
-    *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminPanel') && !location.isCurrentPathEqualTo('/register')">
+    *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminpanel') && !location.isCurrentPathEqualTo('/register')">
   </app-sidebar>
   <router-outlet></router-outlet>
 </div>
