--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -4,56 +4,90 @@
     <h4 class="mb-0">Ajouter un timbre</h4>
     <div class=" card card-outline-secondary">
       <form [formGroup]="timbreForm" class="px-4 py-3 justify-content-between row" (ngSubmit)="addTimbre()">
-
-        <div class="col-6 ">
-          <input type="text" class="form-control" id="numeroInput" placeholder="Numéro" aria-label="Numéro du timbre"
-            formControlName="numero">
+        <!-- CATEGORIE DU TIMBRE -->
+        <div class="btn-group col-12" role="group" aria-label="Basic example">
+          <button type="button" (click)="timbreForm.controls['categorie'].setValue('classic')"
+            [ngClass]="{'active': timbreForm.value.categorie == 'classic'}" class="btn btn-secondary">Classique</button>
+          <button type="button" (click)="timbreForm.controls['categorie'].setValue('spe')"
+            [ngClass]="{'active': timbreForm.value.categorie == 'spe'}" class="btn btn-secondary">Spécial</button>
+          <button type="button" (click)="timbreForm.controls['categorie'].setValue('tas')"
+            [ngClass]="{'active': timbreForm.value.categorie == 'tas'}" class="btn btn-secondary">Taxe Av Serv</button>
+          <button type="button" (click)="timbreForm.controls['categorie'].setValue('cd')"
+            [ngClass]="{'active': timbreForm.value.categorie == 'cd'}" class="btn btn-secondary">Coin
+            Daté</button>
+          <button type="button" (click)="timbreForm.controls['categorie'].setValue('obl')"
+            [ngClass]="{'active': timbreForm.value.categorie == 'obl'}" class="btn btn-secondary">Oblitéré</button>
         </div>
 
-        <div class="col-6">
-          <input placeholder="Prix" type="text" step="0.01" min="0" id="prixInput" class="form-control"
-            aria-label="Prix" formControlName="prix">
+        <div *ngIf="timbreForm.value.categorie =='tas'" class="btn-group btn-group-sm col-6 mt-1 mx-auto" role="group"
+          aria-label="Basic example">
+          <button type="button" (click)="timbreForm.controls['tasType'].setValue('PA')"
+            [ngClass]="{'active': timbreForm.value.tasType == 'PA'}" value="PA" class="btn btn-secondary">PA</button>
+          <button type="button" (click)="timbreForm.controls['tasType'].setValue('Serv')"
+            [ngClass]="{'active': timbreForm.value.tasType == 'Serv'}" value="Serv"
+            class="btn btn-secondary">Serv</button>
+          <button type="button" (click)="timbreForm.controls['tasType'].setValue('Taxe')"
+            [ngClass]="{'active': timbreForm.value.tasType == 'Taxe'}" value="PA"
+            class="btn btn-secondary">Taxe</button>
+          <button type="button" (click)="timbreForm.controls['tasType'].setValue('PR')"
+            [ngClass]="{'active': timbreForm.value.tasType == 'PR'}" value="PR" class="btn btn-secondary">PR</button>
         </div>
 
-        <div class="col-6">
-          <input type="number" min="0" placeholder="Quantité" aria-label="quantité" id="quantiteInput"
-            class="form-control" formControlName="quantite">
+        <div class="form-content row mx-auto col-12 p-0 my-2 justify-content-md-center"
+          *ngIf="timbreForm.value.categorie">
+          <!-- ETAT DU TIMBRE -->
+          <div class="col-4">
+            <select id="typeInput" class="custom-select" formControlName="etat">
+              <option value="neuf">Neuf</option>
+              <option value="occas">Charnière</option>
+              <option value="sg">Sans Gomme</option>
+            </select>
+          </div>
+
+          <!-- NUMERO DU TIMBRE -->
+          <div class="col-4">
+            <input type="text" class="form-control" id="numeroInput" placeholder="Numéro" aria-label="Numéro du timbre"
+              formControlName="numero">
+          </div>
+          <!-- ANNEE POUR CD -->
+          <div *ngIf="timbreForm.value. categorie == 'cd'" class="col-4">
+            <input id="anneeCoinDateInput" type="number" min="0" max="2999" placeholder="Année coin daté"
+              aria-label="Année coin daté" class="form-control" formControlName="anneeCoinDate">
+          </div>
+          <!-- INFOS SUPP POUR OBL/SPE/TAS -->
+          <div
+            *ngIf="timbreForm.value.categorie == 'obl' || timbreForm.value.categorie == 'spe'|| timbreForm.value.categorie == 'tas'"
+            class="col-4">
+            <input id="optionalInfosInput" type="text" placeholder="Infos supp. (a,b..)" aria-label="infos supp."
+              class="form-control" formControlName="optionalInfos">
+          </div>
+          <!-- PRIX TIMBRE -->
+          <div class="col-4">
+            <input placeholder="Prix" type="text" step="0.01" min="0" id="prixInput" class="form-control"
+              aria-label="Prix" formControlName="prix">
+          </div>
+          <!-- QTE TIMBRE -->
+          <div class="col-4">
+            <input type="number" min="0" placeholder="Quantité" aria-label="quantité" id="quantiteInput"
+              class="form-control" formControlName="quantite">
+          </div>
+          <div class="col-8">
+            <input type="url" class="form-control" id="imageInput" aria-label="url de l'image"
+              placeholder="URL de l'image" formControlName="image">
+          </div>
+          <button type="submit" id="sendBtn" class=" btn btn-primary">Ajouter</button>
+
         </div>
 
-        <div class="col-6">
-          <select id="typeInput" class="custom-select" formControlName="type">
-            <option value="neuf">Neuf</option>
-            <option value="occas">Occasion</option>
-            <option value="sg">Sans Gomme</option>
-            <option value="cd">Coin Daté</option>
-            <option value="obl">Oblitéré</option>
-          </select>
-        </div>
-        <div class="col-6">
-          <input id="anneeCoinDateInput" *ngIf="timbreForm.value.type == 'cd'" type="number" min="0" max="2999"
-            placeholder="Année coin daté" aria-label="Année coin daté" class="form-control"
-            formControlName="anneeCoinDate">
-        </div>
-        <div class="col-6">
-          <input id="optionalInfosInput" *ngIf="timbreForm.value.type == 'obl'" type="text"
-            placeholder="Informations supp." aria-label="infos supp." class="form-control"
-            formControlName="optionalInfos">
-        </div>
-        <div class="form-group col-12">
-          <input type="url" class="form-control" id="imageInput" aria-label="url de l'image"
-            placeholder="URL de l'image" formControlName="image">
-        </div>
-
-        <button type="submit" id="sendBtn" class=" btn btn-primary">Ajouter</button>
       </form>
     </div>
   </div>
-  <!-- <pre>{{timbreForm|json}}</pre> -->
 
   <!-- TABLE TIMBRES -->
   <table class="table table-bordered table-striped">
     <thead class="thead-dark">
       <tr>
+        <th>Catégorie</th>
         <th>N°</th>
         <th>Prix</th>
         <th>Image</th>
@@ -64,6 +98,14 @@
     </thead>
     <tbody>
       <tr *ngFor="let timbre of timbreList; index as i">
+        <td>
+          <p class="mb-0" *ngIf="timbre.catTimbre=='classic'">Classique</p>
+          <p class="mb-0" *ngIf="timbre.catTimbre == 'spe'">Spécial</p>
+          <p class="mb-0" *ngIf="timbre.catTimbre == 'tas'">Taxe Av Serv</p>
+          <p class="mb-0" *ngIf="timbre.catTimbre == 'cd'">Coin Daté</p>
+          <p class="mb-0" *ngIf="timbre.catTimbre == 'obl'">Oblitéré</p>
+        </td>
+
         <td>
           <div class="d-flex">
             <p class="text-center mb-0 font-weight-bold">{{timbre.numeroTimbre}}</p>
@@ -76,7 +118,7 @@
         <td>{{ timbre.prixTimbre }}€</td>
         <td>
           <a [href]="timbre.imageTimbreUrl" target="_blank">
-            <img [src]="timbre.imageTimbreUrl" class="mr-2" style="width: 20px">
+            <img [src]="timbre.imageTimbreUrl" class="">
           </a>
         </td>
         <td (blur)="updateTimbre(timbre)">
@@ -93,11 +135,9 @@
         </td>
         <td>
           <div>
-            <p class="mb-0" *ngIf="timbre.typeTimbre=='neuf'">Neuf</p>
-            <p class="mb-0" *ngIf="timbre.typeTimbre=='occas'">Occasion</p>
-            <p class="mb-0" *ngIf="timbre.typeTimbre=='sg'">Sans Gomme</p>
-            <p class="mb-0" *ngIf="timbre.typeTimbre=='cd'">Coin Daté</p>
-            <p class="mb-0" *ngIf="timbre.typeTimbre == 'obl'">Oblitéré</p>
+            <p class="mb-0" *ngIf="timbre.etatTimbre=='neuf'">Neuf</p>
+            <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">Occasion</p>
+            <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">Sans Gomme</p>
           </div>
         </td>
         <td>
