--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,14 +1,16 @@
 <div class="border-right sidebar">
   <div class="sidebar-heading text-center font-weight-bold sidebarTitle">TIMBRES NEUFS</div>
-  <div *ngFor="let limit of limits" class="list-group list-group-flush text-center">
-    <a href="/timbres?start={{limit.start}}&end={{limit.end}}"
+  <div class="list-group list-group-flush text-center">
+    <a *ngFor="let limit of limits" href="/timbres?start={{limit.start}}&end={{limit.end}}"
       class="list-group-item list-group-item-action">{{limit.start}} à {{limit.end}}</a>
+    <a href="/timbres?category=spe" class="list-group-item list-group-item-action">Spéciaux</a>
+    <a href="/timbres?category=tas" class="list-group-item list-group-item-action">Taxe Av Serv</a>
 
   </div>
   <div class="sidebar-heading text-center font-weight-bold sidebarTitle">DIVERS</div>
   <div class="list-group list-group-flush text-center">
-    <a href="/timbres?type=cd" class="list-group-item list-group-item-action">Coins datés</a>
-    <a href="/timbres?type=obl" class="list-group-item list-group-item-action">Oblitérés</a>
+    <a href="/timbres?category=cd" class="list-group-item list-group-item-action">Coins datés</a>
+    <a href="/timbres?category=obl" class="list-group-item list-group-item-action">Oblitérés</a>
     <a href="#" class="list-group-item list-group-item-action">Sites à visiter</a>
   </div>
 </div>
