--- a/src/app/components/admin-register/admin-register.component.html
+++ b/src/app/components/admin-register/admin-register.component.html
@@ -1,6 +1,4 @@
 <h3>Créer un compte Administrateur</h3>
-<div *ngIf="error!= null" class=" mt-4 alert alert-danger" role="alert">
-  {{error |json}} </div>
 <div class="formPanel">
   <form [formGroup]="registerForm" (ngSubmit)="register()">
     <div class="inputs d-flex flex-column align-items-center justify-content-center">
@@ -16,6 +14,7 @@
         <label>Confirmation Mot de passe</label>
         <input required type="password" class="form-control" formControlName="pwdConf" (change)="checkPasswords()">
       </div>
+      <p *ngIf="error !== null" class="m-0 erreur">{{error}}</p>
       <div class=" buttons d-flex">
         <button id="retourBtn" onclick="window.location='/'" class="font-weight-light btn btn-secondary">Retour</button>
         <button id="connectBtn" type="submit" class=" font-weight-light btn btn-primary">Inscription</button>
