--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,10 +4,11 @@
       <img id="headerLogo" src="../../../assets/img/logo_white.png">
     </a>
   </div>
-  <div [ngClass]="{'justify-content-between': isAuth() , 'justify-content-end': !isAuth()}"
+  <div
+    [ngClass]="{'justify-content-between': isAuth() , 'justify-content-end': !isAuth(), 'widthAdjustment' : router.url == '/adminpanel'}"
     class="widgets d-flex flex-column">
     <div id="loginTxt" *ngIf="isAuth()" class="authText d-flex font-weight-bold text-light">
-      <a (click)="router.navigate(['adminPanel'])" id="welcomeText">Bonjour Papa. :)</a>
+      <a (click)="router.navigate(['adminpanel'])" id="welcomeText">Bonjour Papa. :)</a>
       <button class="logoutBtn" (click)="logout()">
         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-power" fill="currentColor"
           xmlns="http://www.w3.org/2000/svg">
@@ -18,7 +19,7 @@
     </div>
     <div id="searchBar">
       <form [formGroup]="searchForm" (ngSubmit)="searchTimbre()">
-        <div *ngIf="!location.isCurrentPathEqualTo('/adminPanel')" class="searchBar">
+        <div *ngIf="!location.isCurrentPathEqualTo('/adminpanel')" class="searchBar">
           <input id="searchInput" formControlName="numero_timbre" type="text" placeholder="N° timbre">
           <button class="searchBtn"><svg width="1.2em" height="1.2em" viewBox="0 0 16 16" class="bi bi-search"
               fill="currentColor" xmlns="http://www.w3.org/2000/svg">
