--- a/src/app/components/timbre-list/timbre-list.component.html
+++ b/src/app/components/timbre-list/timbre-list.component.html
@@ -1,15 +1,46 @@
+<!-- FILTERS -->
+<div class="filters d-flex align-items-center justify-content-around">
+  <div>
+    <label for="filtreInput">TRIER PAR: </label>
+    <select id="filtreInput" class="custom-select input-sm" [(ngModel)]="sortFilter">
+      <option value="NumAsc">NUMÉRO CROISSANT</option>
+      <option value="NumDesc">NUMÉRO DÉCROISSANT</option>
+      <option value="PriceAsc">PRIX CROISSANT</option>
+      <option value="PriceDesc">PRIX DÉCROISSANT</option>
+    </select>
+  </div>
+
+  <div class="custom-control custom-switch">
+    <input [(ngModel)]="dispoFilter" type="checkbox" class="custom-control-input" id="dispoSwitch">
+    <label class="custom-control-label" for="dispoSwitch">DISPONIBLE SEULEMENT</label>
+  </div>
+  <div>
+    <label for="etatFiltre"> AFFICHAGE: </label>
+    <div id="etatFiltre" class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+      <button id="btnGroup1" [ngClass]="{'btnActive': etatFilter === 'all'}" (click)="etatFilter='all'" type="button"
+        class="btn btn-secondary">TOUS</button>
+      <button id="btnGroup2" [ngClass]="{'btnActive': etatFilter === 'alt'}" (click)="etatFilter='alt'" type="button"
+        class="btn btn-secondary">ALTÉRÉS</button>
+      <button id="btnGroup3" [ngClass]="{'btnActive': etatFilter === 'sg'}" (click)="etatFilter='sg'" type="button"
+        class="btn btn-secondary">SANS GOMME</button>
+    </div>
+  </div>
+</div>
+
+<!-- LOADING GIF -->
 <div *ngIf="loading" id="loading">
   <img src="../../../assets/img/loading.gif">
 </div>
-<div class="d-flex" *ngIf="error!= null && timbreList && timbreList !== null &&timbreList.length ==0">
+
+<!-- TIMBRE LIST -->
+<div class="d-flex"
+  *ngIf="error!= null && timbreList && timbreList !== null && timbreList.length ==0 || filteredList.length == 0">
   <p class="d-inline-block alert alert-danger">{{error}}</p>
 </div>
 
-<div *ngIf="timbreList && timbreList !== null &&timbreList.length > 0" class="grille d-flex">
-  <!-- <input type="checkbox" ng-model="dispoFilter"> -->
-  <div class="liste d-flex flex-wrap">
-    <div class="p-2 timbreCard" *ngFor="let timbre of timbreList">
-
+<div *ngIf="timbreList && timbreList !== null &&timbreList.length > 0" class="grille">
+  <div *ngIf="filteredList.length > 0" class="liste d-flex flex-wrap">
+    <div class="p-2 timbreCard" *ngFor="let timbre of filteredList">
       <div class="d-flex justify-content-center">
         <p class="mb-0 font-weight-bold" *ngIf="timbre.catTimbre=='tas'">{{timbre.tasType}}</p>
         <p *ngIf="timbre.numeroTimbre !== 0" class="text-center mb-0 font-weight-bold">{{timbre.numeroTimbre}}</p>
