--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
-<div class="border-right sidebar">
+<div class="sidebar">
   <div class="sidebar-heading text-center font-weight-bold sidebarTitle">TIMBRES NEUFS</div>
-  <div class="list-group list-group-flush text-center">
+  <div class="list-group text-center">
     <a *ngFor="let limit of limits" href="/timbres?start={{limit.start}}&end={{limit.end}}"
       class="list-group-item list-group-item-action">{{limit.start}} à {{limit.end}}</a>
     <a href="/timbres?category=spe" class="list-group-item list-group-item-action">Spéciaux</a>
@@ -8,7 +8,7 @@
 
   </div>
   <div class="sidebar-heading text-center font-weight-bold sidebarTitle">DIVERS</div>
-  <div class="list-group list-group-flush text-center">
+  <div class="list-group text-center">
     <a href="/timbres?category=cd" class="list-group-item list-group-item-action">Coins datés</a>
     <a href="/timbres?category=obl" class="list-group-item list-group-item-action">Oblitérés</a>
     <a href="#" class="list-group-item list-group-item-action">Sites à visiter</a>
