--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -7,20 +7,20 @@
   margin: 1em;
 }
 .widgets {
-  margin: 1em 0;
+  margin: 1em 0.8em 1em 0;
 }
 
 .searchBar input {
   border: none;
-  font-size: 16px;
-  padding: 4px;
-  border-radius: 10px;
+  /* font-size: 16px; */
+  width: 8em;
+  height: 2em;
+  border-radius: 10px 0 0 10px;
   background-color: #e2e2e2;
   text-align: left;
 }
 
 .searchBtn {
-  margin-left: -14%;
   height: 2em;
   border: none;
   border-radius: 0 10px 10px 0;
