--- a/src/app/components/timbre-list/timbre-list.component.html
+++ b/src/app/components/timbre-list/timbre-list.component.html
@@ -40,7 +40,7 @@
 
 <div *ngIf="timbreList && timbreList !== null &&timbreList.length > 0" class="grille">
   <div *ngIf="filteredList.length > 0" class="liste d-flex flex-wrap">
-    <div class="p-2 timbreCard" *ngFor="let timbre of filteredList">
+    <div class="p-2 timbreCard d-flex flex-column justify-content-between" *ngFor="let timbre of filteredList">
       <div class="d-flex justify-content-center">
         <p class="mb-0 font-weight-bold" *ngIf="timbre.catTimbre=='tas'">{{timbre.tasType}}</p>
         <p *ngIf="timbre.numeroTimbre !== 0" class="text-center mb-0 font-weight-bold">{{timbre.numeroTimbre}}</p>
@@ -50,11 +50,11 @@
         <p class="mb-0" *ngIf="timbre.catTimbre == 'obl' || timbre.catTimbre == 'spe'">{{timbre.optionalInfos}}</p>
       </div>
       <div class="mb-0">
-        <p class="align-middle epuise" *ngIf="timbre.quantiteTimbre == 0">EPUISÉ</p>
+        <!-- <p class="align-middle epuise" *ngIf="timbre.quantiteTimbre == 0">EPUISÉ</p> -->
         <a [href]="timbre.imageTimbreUrl" target="_blank">
-          <img class="timbreImg"
-            [ngClass]="{'timbreImg': timbre.catTimbre != 'cd' && timbre.catTimbre !=='spe', 'cdImg': timbre.catTimbre == 'cd','speImg': timbre.catTimbre == 'spe'}"
-            *ngIf="timbre.quantiteTimbre > 0" src="{{timbre.imageTimbreUrl}}">
+          <img
+            [ngClass]="{'timbreImg': timbre.catTimbre != 'cd' && timbre.catTimbre !=='spe', 'cdImg': timbre.catTimbre == 'cd','speImg': timbre.catTimbre == 'spe', 'sold-out':timbre.quantiteTimbre == 0}"
+            src="{{timbre.imageTimbreUrl}}">
         </a>
       </div>
       <p class="text-center mb-0">{{timbre.prixTimbre}}€</p>
