Ajout 'photos non contractuelles'

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <h4>Présentation du site</h4>
   </div>
   <div class="content">
-    <p>Vous trouverez dans ces pages une partie des timbres que je mets en vente.
+    <p>Vous trouverez dans ces pages une partie des timbres que je mets en vente (photos non contractuelles).
     <p>
     <p>Les timbres sont vendus <strong>jusqu'à 80 % de remise</strong> sur la côte Yvert et Tellier.</p>
 
