Ajout d'un type sur le bouton annuler pour permettre l'envoi du login avec la touche 'enter'

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,8 +15,9 @@
       <p *ngIf="error !== null" class="m-0 erreur">{{error}}</p>
 
       <div class=" buttons d-flex">
-        <button id="retourBtn" onclick="window.location='/'" class="font-weight-light btn btn-secondary">Retour</button>
-        <button id="connectBtn" type="submit" class=" font-weight-light btn btn-primary">Connexion</button>
+        <button type="button" id="retourBtn" onclick="window.location='/'"
+          class="font-weight-light btn btn-secondary">Retour</button>
+        <button id="connectBtn" type="submit" class="font-weight-light btn btn-primary">Connexion</button>
       </div>
     </div>
   </form>
