remplacement de 'altérés' par 'charnières'

--- a/src/app/components/timbre-list/timbre-list.component.html
+++ b/src/app/components/timbre-list/timbre-list.component.html
@@ -20,7 +20,7 @@
       <button id="btnGroup1" [ngClass]="{'btnActive': etatFilter === 'all'}" (click)="etatFilter='all'" type="button"
         class="btn btn-secondary">TOUS</button>
       <button id="btnGroup2" [ngClass]="{'btnActive': etatFilter === 'alt'}" (click)="etatFilter='alt'" type="button"
-        class="btn btn-secondary">ALTÉRÉS</button>
+        class="btn btn-secondary">CHARNIÈRES</button>
       <button id="btnGroup3" [ngClass]="{'btnActive': etatFilter === 'sg'}" (click)="etatFilter='sg'" type="button"
         class="btn btn-secondary">SANS GOMME</button>
     </div>
