--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -12,6 +12,14 @@
   width: 18em;
 }
 
+.home-btn {
+  height: 3em;
+  transition: all 0.5s ease-in-out;
+}
+
+.hidden-return-home {
+  height: 0px;
+}
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) {
 }
