--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -49,3 +49,12 @@
 .widthAdjustment {
   width: 14.4%;
 }
+
+#welcomeText {
+  color: white;
+  text-decoration: none;
+}
+#welcomeText:hover {
+  color: white;
+  text-decoration: none;
+}
