--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -1,3 +1,18 @@
+<div class="home-button">
+  <a routerLink="/" class="list-group-item list-group-item-action">
+    <div class="d-flex justify-content-center">
+      <p class="m-0">&lsaquo;</p>
+      <svg width="1.6em" height="1.3em" viewBox="0 0 16 16" class="bi bi-house-door-fill" fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z" />
+        <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
+      </svg>
+      <p class="m-0">Retour à l'accueil</p>
+    </div>
+  </a>
+</div>
+
 <!-- FORM CREATION TIMBRE -->
 <div class="formTimbre">
   <div class="card-header">
@@ -83,8 +98,12 @@
     </div>
   </div>
 
+  <!-- LOADING GIF -->
+  <div *ngIf="loading" id="loading">
+    <img src="../../../assets/img/loading.gif">
+  </div>
   <!-- TABLE TIMBRES -->
-  <table class="table table-bordered table-striped">
+  <table *ngIf="timbreList.length>0" class="table table-bordered table-striped">
     <thead class="thead-dark">
       <tr>
         <th>Catégorie</th>
@@ -96,7 +115,7 @@
         <th>Suppr.</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody *ngIf="!loading">
       <tr *ngFor="let timbre of timbreList; index as i">
         <td>
           <p class="mb-0" *ngIf="timbre.catTimbre=='classic'">Classique</p>
