--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
     *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminpanel') && !location.isCurrentPathEqualTo('/register')">
   </app-sidebar>
   <router-outlet></router-outlet>
+  <app-toast></app-toast>
 </div>
 <app-footer></app-footer>
