--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-<app-header></app-header>
-<!-- <app-navbar></app-navbar> -->
+<app-header>
+</app-header>
 <div class="d-flex">
   <app-sidebar
     *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminpanel') && !location.isCurrentPathEqualTo('/register')">
   </app-sidebar>
   <router-outlet></router-outlet>
+  <app-arrow-to-top></app-arrow-to-top>
   <app-toast></app-toast>
 </div>
 <app-footer></app-footer>
