ajout d'upload d'images

--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -87,10 +87,9 @@
               class="form-control" formControlName="quantite">
           </div>
 
-          <!-- URL IMG -->
-          <div class="col-8">
-            <input type="url" class="form-control" id="urlInput" aria-label="url de l'image"
-              placeholder="URL de l'image" formControlName="image">
+          <!-- IMG -->
+          <div>
+            <input (change)="setImageFile(imageInput)" #imageInput type="file" accept="image/*" />
           </div>
           <button type="submit" id="sendBtn" class=" btn btn-primary">Ajouter</button>
         </div>
